--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@vitejs/plugin-react": "^5.0.1",
     "framer-motion": "^11.2.10",
+    "lucide-react": "^0.424.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.4.0",
+    "@fontsource/inter": "^5.0.20",
+    "@fontsource/outfit": "^5.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
